fidoconfig 0.10
---------------
(released on Mon May 22 14:58:56 CEST 2000)


----- cvs ci ------
Sat Aug 27 19:31:04 NOVST 2000
max:
* "tparser -Dmodule=hpt" prints only hpt keywords
* excludePassthroughCarbon token
* packer none (no pack mail)

----- cvs ci ------
Fri Aug 25 12:37:46 NOVST 2000
max (patch from Serguei Revtov):
* token BundleNameStyle

----- cvs ci ------
Mon Aug 14 12:07:14 NOVST 2000
max (patch from PG):
* tparser show deflink
* stripping spaces before if, endif, etc...

----- cvs ci ------
Sat Aug  5 12:53:03 NOVST 2000
max:
* parsePath() modifications, see also docs about msgBaseDir.

----- cvs ci ------
Mon Jul 31 12:18:23 NOVST 2000
max (patch from Pavel Gulchouk):
* dumpcfg put "advancedAreafix" and "-def" now

----- cvs ci ------
Thu Jul 27 18:17:50 NOVST 2000
max:
* added cfg.c to source tree

----- cvs ci ------
Thu Jul 26 18:17:50 NOVST 2000
max (patch from Pavel Gulchouk):
* set, if, else, elseif, ifdef, ifndef, endif
* arealink option -def
* -Dvar=value in tparser parameters (example: "tparser -Dmodule=hpt")
* link option advancedAreaFix

----- cvs ci ------
Tue Jul 18 22:51:16 NOVST 2000
max:
* fgetsUntil0 modification

----- cvs ci ------
Sun Jul  9 20:01:16 NOVST 2000
max:
* added ignoreSeen

----- cvs ci ------
Tue Jul  4 22:36:41 NOVST 2000
max:
* add -killsb to echoarea options

----- cvs ci ------
Fri Jul  3 22:10:40 NOVST 2000
max:
* [envvar] supported under all platforms, `cmd` in UNIX & OS/2+EMX

----- cvs ci ------
Sun Jul  2 16:13:24 NOVST 2000
max:
* fixed broken fidoconf (`cmd` & [envvar] parses only in UNIX & OS/2)

----- cvs ci ------
Sat Jul  1 12:44:09 NOVST 2000
max:
* fixed core dump when -a <addr> in echoarea not found (Alex Belozuerov)
* parsePublic code cleanup

----- cvs ci ------
Fri Jun 30 23:25:08 NOVST 2000
max (patch from Pavel Gulchouk):
* `cmd` & [envvar] parsing

----- cvs ci ------
Tue Jun 27 22:54:18 NOVST 2000
max:
* parsePath() optimization

----- cvs ci ------
Sat Jun 24 19:44:32 NOVST 2000
max: